--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
                 <div class="modal-content">
                     <img src="imgs\logo.svg" class="meet-logo" alt="meet-logo">
                     <span class="close">&times;</span>
-                    <span class="modal-header">Sign in to Meet</span>
-                    <form action="">
+                    <span class="modal-header"></span>
+                    <form id="signup-form" action="">
+                        <div class="signin-name">Name</div>
+                        <input type="text">
                         <div class="email">Email</div>
                         <input type="text">
                         <div class="password">Password</div>
                         <input type="password">
-                        <button class="modal-button">Log in</button>
+                        <button id="modal-button">Sign up</button>
+                    </form>
+                    <form id="signin-form" action="">
+                        <div class="email">Email</div>
+                        <input type="text">
+                        <div class="password">Password</div>
+                        <input type="password">
+                        <button id="modal-button">Log in</button>
                     </form>
                 </div>
             </div>
