--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 Meet makes it easy to connect with others face-to-face virtually and collaborate across any device
             </p>
             <div class="signButtons">
+                <!-- signup-link -->
                 <button class="signup">Sign up</button>
+                <!-- signin-link -->
                 <button class="signin">Sign in</button>
             </div>
             <!-- The Modal -->
@@ -36,7 +38,7 @@
                     <span class="modal-header"></span>
                     <!-- signup form -->
                     <form id="signup-form" action="">
-                        <div class="form-control error">
+                        <div class="form-control">
                             <div class="label">Name</div>
                             <input id="input-name" type="text">
                         </div>
@@ -48,6 +50,7 @@
                             <div class="label">Password</div>
                             <input id="input-password" type="password">
                         </div>
+                        <!-- signup -->
                         <button id="submit-signup">Sign up</button>
                     </form>
                     <!-- signin form -->
